# EmbassyTemplate

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
example/: Cargo.toml  Embed.toml  build.rs
example/helper/: bindings.rs  init.rs  irq.rs  macros.rs  mod.rs  resrc.rs
example/helper/dev/: device.rs  devid.rs  heart.rs  inner.rs  mod.rs  status.rs
example/helper/res/: init.rs
example/lib/: mod.rs  status.rs
example/lib/dev/: devid.rs  heart.rs  mod.rs
example/lib/res/: resrc.rs
example/src/: main.rs
example/src/controller/: mod.rs
example/src/system/: devices.rs  devids.rs  interrupts.rs  mod.rs  resources.rs  status.rs
example/src/tasks/: mod.rs
example/src/tasks/blinky/: led_task.rs  task.rs
example/src/tasks/health/: devid.rs  heart.rs  mod.rs  task.rs
example/src/utils/: bindings.rs  bindit.rs  clink.rs  init.rs  irq.rs  mod.rs
utils/: Cargo.toml
utils/src/: init.rs  lib.rs
