[workspace]
resolver = "3"

package.version = "0.0.0"
package.edition = "2024"
package.publish = false
package.authors = ["Salfa <me@salfa.cc>"]
default-members = ["utils"]

members = ["utils"]


[profile]
release.lto   = true
release.debug = true


[workspace.dependencies]
assign-resources = "0.5"

[workspace.dependencies.utils]
path     = "./utils"
features = []


[workspace.dependencies.defmt]
version  = "1.0"
features = ["encoding-rzcobs", "ip_in_core"]
[workspace.dependencies.embassy-executor]
version  = "0.9"
features = ["arch-cortex-m", "executor-thread", "defmt"]

[profile.dev.package]
cortex-m.opt-level         = 3
cortex-m-rt.opt-level      = 3
embassy-executor.opt-level = 3
embassy-time.opt-level     = 3
embassy-stm32.opt-level    = 3
defmt-rtt.opt-level        = 3
