[package]
name  = "<NAME>"
build = "build.rs"

version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]


defmt.workspace            = true
defmt-rtt.workspace        = true
panic-probe.workspace      = true
cortex-m.workspace         = true
cortex-m-rt.workspace      = true
bitfield-struct.workspace  = true
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
embedded-io.workspace      = true
embassy-stm32.workspace    = true


[build-dependencies]
cargo-emit = "0.2"

cc = { version = "1.2", features = ["parallel"] }
