[package]
name  = "<NAME>"
build = "build.rs"

authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]

assign-resources = "0.5"

utils.workspace            = true
defmt.workspace            = true
embassy-executor.workspace = true


[build-dependencies]
cargo-emit = "0.2"
